# verifytech

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend-api/: .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt
backend-api/app/: config.py  main.py
backend-api/app/api/routes/: account.py  agent_pairing.py  agents.py  auth_profile.py  certificates.py  certification_sessions.py  dashboard.py  intake.py  reports.py  reports_public.py  scan_sessions.py  scans.py  tenants.py  verify.py
backend-api/app/auth/: __init__.py  certification_session_jwt.py  deps.py  jwt.py  scan_upload_jwt.py
backend-api/app/db/: models.py  records.py  repository.py  supabase_client.py
backend-api/app/schemas/: dto.py
backend-api/app/services/: account_service.py  agent_pairing_service.py  agent_report_adapter.py  agent_service.py  agent_storage_service.py  audit_service.py  certification_service.py  certification_session_service.py  dashboard_service.py  email_service.py  evidence_storage_service.py  functional_validation_labels.py  inspection_report_service.py  intake_service.py  plain_language_report.py  report_service.py  scan_pairing_service.py  scan_report_service.py  scan_session_service.py  tenant_service.py  verification_service.py
database/: README.md  data_reset.sql  reset.sql  schema.sql  upgrade.sql
frontend-dashboard/: package-lock.json  package.json
frontend-public/: package-lock.json  package.json
scripts/: build-agent.cmd  build-agent.ps1  build-agent.sh  data-reset-prod.sh  dev.sh  empty_storage_buckets.py  reset-database.sh  (+5 more)
(+188 files in other folders)
